--- a/ColorTime/src/main/AndroidManifest.xml
+++ b/ColorTime/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </service>
         <activity
             android:name="com.thenairn.colortime.settings.ColorSettings"
+            android:theme="@android:style/Theme.Material"
             android:exported="true"
             android:label="Settings"/>
     </application>
